--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,18 @@ body {
     padding: 0;
     text-align: center;
     font-size: 32px;
+    
+}
+
+button {
+    height: 32px;
+    padding: auto;
+    display: inline-flex;    
+    align-items: center;
+    justify-content: center;
+    font-family: 'Dongle', sans-serif;
+    font-size: 32px;
+    border-radius: 10px;
+    background-color: #999999;
+    color: #000000;
 }
