Made functional sign up and login pages And they redirect to each other properly. Yeah, it's great.

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 @font-face {
   font-family: "Dongle";
-  src: url("Dongle-Regular.ttf") format("truetype");
+  src: url("fonts/Dongle-Light.ttf") format("truetype");
 }
 body {
     background: var(--bg-color);
