--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,15 @@ button {
     background-color: var(--bg-color);
     color: var(--text-color);
 }
+
+button:hover {
+    background-color: var(--text-color);
+    color: var(--bg-color);
+    cursor: pointer;
+}
+
+.password-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
