--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,12 @@ button:hover {
   flex-direction: column;
   align-items: center;
 }
+
+table {
+  border-collapse: collapse;
+th {
+  border: 3px solid ;
+}
+td {
+  line-height: 0.75 ;
+}}  
