--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,19 @@ button:hover {
     cursor: pointer;
 }
 
+input {
+    font-family: 'Dongle', sans-serif;
+    font-size: 32px;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px 0;
+    border: 2px solid var(--text-color);
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
 .password-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  width: max(20%, 512px);
 }
   
